tests/build/cases/ui_node/missing_matching_delegate_child.stderr
error: auto impl delegates call to `update`, but this manual impl does not
       `#[deny_(zero_ui::missing_delegate)]` is on
  --> cases/ui_node/missing_matching_delegate_child.rs:18:80
   |
18 |       fn update(&mut self, ctx: &mut WidgetContext, updates: &mut WidgetUpdates) {
   |  ________________________________________________________________________________^
19 | |         let _ = (ctx, updates);
20 | |         // does not call self.child.update(ctx, updates);
21 | |     }
   | |_____^
